tests/compilation_tests/07_fail_name_reuse.stderr
error[E0428]: the name `MyTensor_module` is defined multiple times
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ----------------------------------------------- previous definition of the module `MyTensor_module` here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MyTensor_module` redefined here
  |
  = note: `MyTensor_module` must be defined only once in the type namespace of this block
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `MyTensor` is defined multiple times
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ----------------------------------------------- previous definition of the type `MyTensor` here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MyTensor` redefined here
  |
  = note: `MyTensor` must be defined only once in the type namespace of this block
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `MyTensorError` is defined multiple times
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ----------------------------------------------- previous definition of the type `MyTensorError` here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MyTensorError` redefined here
  |
  = note: `MyTensorError` must be defined only once in the type namespace of this block
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Debug` for type `main::MyTensor`
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ----------------------------------------------- first implementation here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensor`
  |
  = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Debug` for type `main::MyTensorError`
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ----------------------------------------------- first implementation here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensorError`
  |
  = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `std::error::Error` for type `main::MyTensorError`
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ----------------------------------------------- first implementation here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensorError`
  |
  = note: this error originates in the derive macro `thiserror::Error` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `std::fmt::Display` for type `main::MyTensorError`
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ----------------------------------------------- first implementation here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensorError`
  |
  = note: this error originates in the derive macro `thiserror::Error` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Deref` for type `main::MyTensor`
 --> tests/compilation_tests/07_fail_name_reuse.rs:6:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     --------------------- first implementation here
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensor`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `is_initialized`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `is_initialized`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `is_initialized`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `get_dims`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `get_dims`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `get_dims`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `get_kind`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `get_kind`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `get_kind`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `set`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `set`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `new`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `new`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `new`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `tensor`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `tensor`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `tensor`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `into_inner`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `into_inner`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `into_inner`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `clone`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `clone`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `clone`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `apply`
 --> tests/compilation_tests/07_fail_name_reuse.rs:4:5
  |
4 |     tensor_type!(MyTensor, [i64], tch::Kind::Float);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `apply`
5 |     // This line won't compile because the type MyTensor is already defined.
6 |     tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  |     ---------------------------------------------------- other definition for `apply`
  |
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)
